# r_csv

./: .gitignore  .rust-analyzer.json  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  Gemfile  README.md  Rakefile  benchmark.rb  large_sample.csv  output_comparison.rb  r_csv.gemspec  rbcsv-0.1.0.gem  rbcsv.gemspec  sample.csv  test.rb  test_fixed.rb  test_install.rb  test_write_functionality.rb
.github/workflows/: main.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
docs/: exe_upgrade_version.md  release_process_v0.1.8.md  special_character_bug_fix.md  write_functionality_implementation.md
examples/: README.md
examples/basic/: basic_usage.rb  quick_test.rb  test_fixed.rb
examples/benchmarks/: benchmark.rb  output_comparison.rb  sample.csv
examples/features/: test_typed_functionality.rb  test_write_functionality.rb
ext/r_csv/: Cargo.toml
ext/r_csv/src/: lib.rs
ext/rbcsv/: Cargo.toml  extconf.rb
ext/rbcsv/src/: error.rs  lib.rs  parser.rs  ruby_api.rs  value.rs
lib/: r_csv.rb  rbcsv.rb
lib/r_csv/: version.rb
lib/rbcsv/: version.rb
sig/: r_csv.rbs
spec/: r_csv_spec.rb  rbcsv_spec.rb  spec_helper.rb
spec/fixtures/: test.csv  test_with_spaces.csv
