[package]
name = "rbcsv"
version = "0.2.0"
edition = "2021"
authors = ["fujitani sora <fujitanisora0414@gmail.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
csv = "1.3.1"
magnus = { version = "0.8.1" }
# rb-sys = { version = "0.9", features = ["link-ruby"] }
log = "0.4"

[dev-dependencies]
env_logger = "0.10"
